# libeasyjsonparser

./: .travis.yml  README.md  conanfile.py  configure.ac
examples/: Makefile  ejp_hello_tiny.c  ejp_hello_universe.c  ejp_hello_universe.json  ejp_hello_world.c  ejp_hello_world.json
src/: Makefile.am  easyjsonparser.c  easyjsonparser.h  exports.sym
test/: .gitignore  Makefile.am  check_easyjsonparser.c  check_hello_tiny.json  check_hello_universe.json  check_hello_world.json  easyjsonparser_check.c  easyjsonparser_check.h
